--- a/apps/admin/src/components/SystemAutocomplete/SystemAutocomplete.module.css
+++ b/apps/admin/src/components/SystemAutocomplete/SystemAutocomplete.module.css
@@ -1,6 +1,7 @@
 .wrapper {
   position: relative;
   flex: 1;
+  min-width: 0;
 }
 
 .wrapper input {
